# khora_adapter

./: .coveragerc  .env.example  .gitignore  LICENSE  README.md  mypy.ini  pyproject.toml
scripts/: check.ps1  code_review_zipper.py  fix.ps1  get_py_files.py  show_clean_structure.ps1
src/khora_adapter/: api_test.py  cli.py  prompt.py
src/khora_adapter/llm/: __init__.py  base.py  config.py  factory.py  registry.py  types.py  utils.py
src/khora_adapter/llm/gemini/: config.py  factory.py  model.py  parse.py
src/khora_adapter/llm/openai/: config.py  factory.py  model.py  parse.py
tests/: conftest.py
tests/khora_adapter/: test_prompt.py
tests/khora_adapter/llm/: test_factory_registry.py  test_gemini_factory.py  test_gemini_model.py  test_openai_factory.py  test_openai_model.py
